Prevent EditGame scrolling on overflow

--- a/src/components/Dialogs/EditGameDialog.css
+++ b/src/components/Dialogs/EditGameDialog.css
@@ -3,13 +3,15 @@
     flex-direction: column;
     width: 900px;
     max-width: 85vw;
-    height: 100%;
+    height: 85vh;
+    overflow: hidden;
 
     .edit-game-body {
         display: flex;
         flex-direction: row;
         gap: 20px; /* same as the dialog's padding */
         height: 100%;
+        max-height: calc(85vh - 131px); /* 131px for header, footer, padding */
 
         .edit-game-fields {
             width: 100%;
@@ -32,8 +34,6 @@
         }
         .cover-art-selector {
             width: 100%;
-            height: 100%;
-            max-height: calc(85vh - 130px); /* TODO: temp until scrollview -> overflow switch */
             display: flex;
             flex-direction: column;
             --covers-gallery-padding: 16px; /* padding to give space for selection highlight */
